# oncoplotpy

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: cBioPortal_laml.ipynb
src/oncoplotpy/: __init__.py  oncoplot.py  plotter.py  transformer.py
src/oncoplotpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_transformer.py
